--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -12,7 +12,7 @@ nbconvert==6.5.0         # Fix https://github.com/patrick-kidger/equinox/issues/
 # Dependencies of Equinox itself.
 # Always use most up-to-date versions.
 
-jaxlib==0.4.17
-equinox==0.11.2
-optax==0.1.7
-chex==0.1.85
+# jaxlib==0.4.17
+# equinox==0.11.2
+# optax==0.1.7
+# chex==0.1.85
